# POGL-FFT-Ocean

./: CMakeLists.txt  README.md  main.cpp
src/camera/: camera.cpp  camera.hpp
src/fft/: fast_fourier_transform.cpp  fast_fourier_transform.hpp
src/ocean/: ocean.cpp  ocean.hpp
src/ocean/fft/: fast_fourier_transform.cpp  fast_fourier_transform.hpp
src/ocean/height/: height_spectrum.cpp  height_spectrum.hpp
src/ocean/philipps/: philipps_spectrum.cpp  philipps_spectrum.hpp
src/philipps/: philipps_spectrum.hpp
src/render/: gl_rendering.cpp  object_vbo.hpp  object_vbo_tmp.hpp  rendering.cpp  rendering.hpp
src/tools/: gl_utils.cpp  gl_utils.hpp  matrix4.cpp  matrix4.hpp  option_parsing.cpp  option_parsing.hpp  program.cpp  program.hpp
